fix: small dark mode fix

--- a/src/global-styles/custom.scss
+++ b/src/global-styles/custom.scss
@@ -829,6 +829,10 @@ html[data-theme='dark'] {
       }
     }
   }
+
+  .text-dark {
+    color: #fff !important;
+  }
 }
 
 .nav-vertical {
